fixed the flexbox wrap of the icon box set

--- a/css/src/main.css
+++ b/css/src/main.css
@@ -433,6 +433,7 @@ a{
 .icon-box-set{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .icon-box{
     display: flex;
@@ -526,6 +527,7 @@ a{
 .member{
     margin: 0;
     width: 20%;
+    flex-direction: column;
 }
 .member-details{
     position:absolute;
